2-network-policies/mongodb/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    name: mongodb
  namespace: production
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    role: mongodb
