2-network-policies/mongodb/nosqlclient-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nosqlclient
  name: nosqlclient
  namespace: production
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    run: nosqlclient
